header alignment correction

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
 }
 
 .header {
-    max-width: 800px;
     margin: 0 auto;
     padding-top: 24px;
     padding-bottom: 8px
